<resources>
    <string name="app_name">SelfMg</string>

    <!-- Loding Activity -->
    <string name="loding_activity_title">Self Management</string>
    <!-- Loding Activity -->

    <!-- Login Activity -->
    <string name="login_title1">Self</string>
    <string name="login_title2">Management</string>
    <string name="login_hint_email">이메일</string>
    <string name="login_hint_password">비밀번호</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_signup">회원가입</string>
    <string name="login_division">|</string>
    <string name="login_findId">아이디 찾기</string>
    <string name="login_findPw">비밀번호 찾기</string>
    <string name="login_btn_google">구글 로그인</string>
    <!-- Login Activity -->

    <!-- SignUp Phone Activity -->
    <string name="signUp_phone_title">전화번호를 입력해 주세요.</string>
    <string name="signUp_input_phone_num">휴대전화번호</string>
    <string name="signUp_btn_send_sms">인증하기</string>
    <string name="signUp_input_check_num">인증번호를 입력해주세요.</string>
    <string name="signUp_btn_success">확인</string>
    <string name="signUp_move_first">처음으로 돌아가기</string>
    <!-- SignUp Phone Activity -->

    <!-- SignUp Activity -->

    <!-- 이메일 -->
    <string name="signup_create_email">이메일</string>
    <string name="signup_create_email_hint">이메일을 입력해주세요.</string>
    <string name="signup_user_email_use_alarm">사용가능한 이메일입니다.</string>
    <string name="signup_user_email_check">중복확인</string>
    <!-- 이메일 -->

    <!-- 패스워드 -->
    <string name="signup_create_password">비밀번호</string>
    <string name="signup_create_password_hint">비밀번호를 입력해주세요.</string>
    <string name="signup_create_password_use_alarm">사용가능한 비밀번호입니다.</string>
    <string name="signup_create_password_check">비밀번호 확인</string>
    <string name="signup_create_password_check_hint">비밀번호 확인입니다.</string>
    <string name="signup_create_password_check_alarm">비밀번호가 일치합니다.</string>
    <string name="signup_user_password_check">일치확인</string>
    <!-- 패스워드 -->

    <!-- 회원가입 완료 버튼 -->
    <string name="btn_signup_finish">회원가입 완료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 회원가입 완료 버튼 -->

    <!-- SignUp Activity -->

    <!-- Create Name Activity -->
    <string name="create_name_title">사용할 닉네임을 입력해주세요.</string>
    <string name="create_name_hint">최대 6글자</string>
    <string name="create_name_btn_check">중복확인</string>
    <string name="create_name_btn_success">확인</string>
    <string name="create_name_check_alarm">사용가능합니다.</string>
    <!-- Create Name Activity -->
    키
    <!-- Bottom Navigation Menu -->
    <string name="bottom_navi_current">CurrentUser</string>
    <string name="bottom_navi_health">MyHealth</string>
    <string name="bottom_navi_plan">MyPlan</string>
    <string name="bottom_navi_setting">Setting</string>
    <!-- Bottom Navigation Menu -->


    <!-- Current Fragment -->
    <string name="current_fragment_title">현재상태</string>
    <!-- Current Fragment -->

    <!-- My Health Fragment -->
    <string name="health_fragment_title">자기관리</string>
    <string name="health_fragment_btn_bmi">BMI 측정하기</string>
    <string name="health_fragment_btn_bmi_num_title">My BMI :</string>
    <string name="health_fragment_btn_bmi_num_value">0</string>
    <string name="health_fragment_btn_bmi_range_value">null</string>
    <!-- My Health Fragment -->

    <!-- Health Bottom Sheet -->
    <string name="health_bottom_sheet">상단의 조회하기를 클릭해주세요</string>
    <!-- Health Bottom Sheet -->

    <!-- Bmi Calculation Activity -->
    <string name="bmi_calculation_activity_toolbar">나의 BMI구하기</string>
    <string name="bmi_calculation_activity_info">BMI를 이용한 비만도 계산은 자신의 몸무게를 키의 제곱으로 나누는 것으로 공식은 kg/㎡. \n ex) 키 170㎝에 몸무게 73kg이면, 계산식 : 73 / (1.7×1.7) = 25.26 → 과체중</string>
    <string name="bmi_calculation_height">신장</string>
    <string name="bmi_calculation_height_hint">키를 입력해주세요.</string>
    <string name="bmi_calculation_height_cm">cm</string>
    <string name="bmi_calculation_weight">체중</string>
    <string name="bmi_calculation_weight_hint">체중을 입력해주세요.</string>
    <string name="bmi_calculation_weight_cm">kg</string>
    <string name="bmi_calculation_range_1">0 저체중</string>
    <string name="bmi_calculation_range_2">18.5 정상</string>
    <string name="bmi_calculation_range_3">23 과체중</string>
    <string name="bmi_calculation_range_4">25 경도비만</string>
    <string name="bmi_calculation_range_5">30 중등도비만</string>
    <string name="bmi_calculation_range_6">BMI</string>
    <string name="bmi_calculation_range_division_1">/</string>
    <string name="bmi_calculation_range_division_2">|</string>
    <string name="bmi_calculation_btn_start_result">측정하기</string>
    <string name="bmi_calculation_btn_bmi_clear">초기화</string>
    <string name="bmi_calculation_result_textview_myBmi">MY BMI :</string>
    <string name="bmi_calculation_result_textview_myBmi_empty">   </string>
    <string name="bmi_calculation_btn_result_save">결과 저장하기</string>
    <!-- Bmi Calculation Activity -->

    <!-- Plan Fragment -->
    <string name="plan_fragment_title">계획</string>
    <string name="plan_fragment_item_checkList">체크리스트</string>
    <!-- Plan Fragment -->

    <!-- Plan Fragment TabLayout Title -->
    <string name="plan_fragment_tab_todoList">TodoList</string>
    <string name="plan_fragment_tab_memo">메모</string>
    <string name="plan_fragment_tab_schedule">일정</string>
    <!-- Plan Fragment TabLayout Title -->

    <!-- Plan Fragment - TodoList -->
    <string name="plan_todoList_title">나의 할일</string>
    <string name="plan_todoList_select_selectAll">선택항목 삭제</string>
    <string name="plan_todoList_add_todoList_title">할 일 추가하기</string>
    <string name="plan_todoList_add_todoList_content">할 일을 입력해주세요</string>
    <string name="plan_todlList_add_button">추가하기</string>
    <string name="plan_todlList_cancel_button">취소하기</string>
    <!-- Plan Fragment - TodoList -->

    <!-- item todolist row -->
    <string name="item_todolist_row_todocontent">todo</string>
    <string name="item_todolist_row_todoTimestamp">Time Stamp</string>
    <!-- item todolist row -->

    <!-- Dialog Add Todo Fragment -->
    <string name="add_todo_title">할 일 추가하기</string>
    <string name="add_todo_btn_content_save">저장하기</string>
    <string name="add_todo_btn_content_cancel">취소하기</string>
    <!-- Dialog Add Todo Fragment -->

    <!-- item TodoList menu option -->
    <string name="item_todo_menu_option1">선택항목 삭제</string>
    <!-- item TodoList menu option -->

    <!-- item memolist row -->
    <string name="item_memolist_row_memo_title">메모 제목</string>
    <string name="item_memolist_row_memo_content">메모 내용</string>
    <string name="item_memolist_row_memo_timestamp">2022년 9월 5일</string>
    <!-- item memolist row -->

    <!-- Write Memo Activity -->
    <string name="write_memo_toolbar_title">메모 작성하기</string>
    <string name="write_memo_title">제목</string>
    <string name="btn_write_memo_save">저장</string>
    <string name="btn_write_memo_cancel">취소</string>
    <string name="write_memo_content_hint">메모를 입력해주세요</string>
    <!-- Write Memo Activity -->

    <!-- Schedule Fragment -->
    <string name="toolbar_schedule_title">나의 스케줄</string>
    <string name="schedule_day_monday">월</string>
    <string name="schedule_day_tuesday">화</string>
    <string name="schedule_day_wednesday">수</string>
    <string name="schedule_day_thursday">목</string>
    <string name="schedule_day_friday">금</string>
    <string name="schedule_time_am_6">06:00</string>
    <string name="schedule_time_am_7">07:00</string>
    <string name="schedule_time_am_8">08:00</string>
    <string name="schedule_time_am_9">09:00</string>
    <string name="schedule_time_am_10">10:00</string>
    <string name="schedule_time_am_11">11:00</string>
    <string name="schedule_time_am_12">12:00</string>
    <string name="schedule_time_pm_1">13:00</string>
    <string name="schedule_time_pm_2">14:00</string>
    <string name="schedule_time_pm_3">15:00</string>
    <string name="schedule_time_pm_4">16:00</string>
    <string name="schedule_time_pm_5">17:00</string>
    <string name="schedule_time_pm_6">18:00</string>
    <string name="schedule_time_pm_7">19:00</string>
    <string name="schedule_time_pm_8">20:00</string>
    <string name="schedule_time_pm_9">21:00</string>
    <string name="schedule_time_pm_10">22:00</string>
    <string name="schedule_time_pm_11">23:00</string>
    <string name="schedule_time_pm_12">24:00</string>
    <string name="schedule_time_am_1">01:00</string>
    <string name="schedule_time_am_2">02:00</string>
    <string name="schedule_time_am_3">03:00</string>
    <string name="schedule_time_am_4">04:00</string>
    <string name="schedule_time_am_5">05:00</string>
    <!-- Schedule Fragment -->

    <!-- Add Schedule Activity -->
    <string name="add_schedule_toolbar_title">스케줄 추가하기</string>
    <!-- Add Schedule Activity -->

    <!-- Setting Fragment -->
    <string name="setting_fragment_title">더보기</string>
    <!-- Setting Fragment -->

</resources>