<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.activity.BmiCalculationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_bmi_calculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/bmi_calculation_activity_toolbar"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/btn_bmi_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_bmi_calculation" />

        <TextView
            android:id="@+id/tv_bmi_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/bmi_calculation_activity_info"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bmi_info" />

        <LinearLayout
            android:id="@+id/linear_bmi_height"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_bmi_calculation">

            <TextView
                android:id="@+id/tv_bmi_height"
                style="@style/bmi_calculation_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/bmi_calculation_height" />

            <EditText
                android:id="@+id/ed_bmi_input_height"
                style="@style/bmi_calculation_editView"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:hint="@string/bmi_calculation_height_hint" />

            <TextView
                android:id="@+id/tv_bmi_height_cm"
                style="@style/bmi_calculation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_height_cm" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_bmi_weight"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_bmi_height">

            <TextView
                android:id="@+id/tv_bmi_weight"
                style="@style/bmi_calculation_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/bmi_calculation_weight" />

            <EditText
                android:id="@+id/ed_bmi_input_weight"
                style="@style/bmi_calculation_editView"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:hint="@string/bmi_calculation_weight_hint" />

            <TextView
                android:id="@+id/tv_bmi_weight_cm"
                style="@style/bmi_calculation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_weight_cm" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_bmi_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_bmi_weight">

            <TextView
                android:id="@+id/tv_bmi_range_1"
                style="@style/bmi_calculation_range_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_1" />

            <TextView
                style="@style/bmi_calculation_range_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_division_1" />

            <TextView
                android:id="@+id/tv_bmi_range_2"
                style="@style/bmi_calculation_range_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_2" />

            <TextView
                style="@style/bmi_calculation_range_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bmi_calculation_range_division_2" />

            <TextView
                android:id="@+id/tv_bmi_range_3"
                style="@style/bmi_calculation_range_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_3" />

            <TextView
                style="@style/bmi_calculation_range_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_division_1" />

            <TextView
                android:id="@+id/tv_bmi_range_4"
                style="@style/bmi_calculation_range_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_4" />

            <TextView
                style="@style/bmi_calculation_range_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bmi_calculation_range_division_2" />

            <TextView
                android:id="@+id/tv_bmi_range_5"
                style="@style/bmi_calculation_range_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_5" />

            <TextView
                style="@style/bmi_calculation_range_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_division_1" />

            <TextView
                android:id="@+id/tv_bmi_range_6"
                style="@style/bmi_calculation_range_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculation_range_6" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_start_bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/bmi_calculation_btn_start_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_bmi_range" />

        <Button
            android:id="@+id/btn_start_bmi_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/bmi_calculation_btn_bmi_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_bmi_range" />

        <LinearLayout
            android:id="@+id/linear_bmi_result"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/radius_memo_list_background"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_bmi_result">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_calculation_result_textview_myBmi"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bmi_result_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/bmi_calculation_result_textview_myBmi_empty"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_bmi_result_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bmi_calculation_result_textview_myBmi_empty"
                android:textColor="#2D81FF"
                android:textSize="23sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_bmi_result_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/bmi_calculation_btn_result_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>