<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_current">
    <activity
        android:id="@+id/lodingActivity"
        android:name="com.duran.selfmg.ui.view.activity.LodingActivity"
        android:label="activity_loding"
        tools:layout="@layout/activity_loding" />
    <fragment
        android:id="@+id/fragment_current"
        android:name="com.duran.selfmg.ui.view.fragment.CurrentFragment"
        android:label="@string/bottom_navi_current"
        tools:layout="@layout/fragment_current" />
    <fragment
        android:id="@+id/fragment_health"
        android:name="com.duran.selfmg.ui.view.fragment.HealthFragment"
        android:label="@string/bottom_navi_health"
        tools:layout="@layout/fragment_health" />
    <fragment
        android:id="@+id/fragment_health_empty"
        android:name="com.duran.selfmg.ui.view.fragment.HealthEmptyFragment"
        android:label="fragment_health_empty"
        tools:layout="@layout/fragment_health_empty" />
    <fragment
        android:id="@+id/fragment_plan"
        android:name="com.duran.selfmg.ui.view.fragment.PlanFragment"
        android:label="@string/bottom_navi_plan"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.duran.selfmg.ui.view.fragment.SettingFragment"
        android:label="@string/bottom_navi_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/todoListFragment"
        android:name="com.duran.selfmg.ui.view.fragment.TodoListFragment"
        android:label="TodoListFragment"
        tools:layout="@layout/fragment_todo_list"/>
    <fragment
        android:id="@+id/memoFragment"
        android:name="com.duran.selfmg.ui.view.fragment.MemoFragment"
        android:label="fragment_memo"
        tools:layout="@layout/fragment_memo" />
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.duran.selfmg.ui.view.fragment.ScheduleFragment"
        android:label="fragment_schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>